# cuHPX

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
.licenses/: README.md  details.json
cuhpx/: __init__.py  hpx_regrid.py  hpx_remap.py  hpx_sht.py  sht_tools.py
src/data_remapping/: hpx_remapping.cpp  hpx_remapping.h  hpx_remapping_cuda.cu
src/harmonic_transform/: hpx_fft.cpp  hpx_fft.h  hpx_fft_cuda.cu
tests/: download.py  nest2xy_benchmark.py  reproduce_cuhpx_sht_profiling.py  reproduce_cuhpx_sht_round_trip_error.py  reproduce_cuhpx_sht_timing.py  reproduce_data_reorder_timing.py  reproduce_difference_between_healpy_cuhpx.py  reproduce_video_for_differentiability.py  test_batch_remap.py  test_data_remapping.py  test_differentiability.py  test_grad.py  test_harmonic_transform.py  test_regridding.py  test_sht_bluestein.py  test_sht_cuda.py  test_sht_cuda_batch.py  test_sht_cuda_stream.py  test_sht_two_stream_overlap_profiling.py
